src/sample/Errors/C0009_(not_implemented).st
// C0009: Unexpected token '{name}' found
// SAMPLE: _xx := SBYTE#-1;
// This error will not be implemented because it is just a syntax error.